background-image-fixed

--- a/src/HeroSection/herosection.css
+++ b/src/HeroSection/herosection.css
@@ -5,7 +5,7 @@
     padding: 3rem;
     font-family: inherit;
     color: white;
-    background-image: url("D:\sarvvid-ai\sarvvid\src\Images\background.svg");
+    background-image: url("../Images/background.svg");
     background-position: center;
   }
   
