--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 1rem 4rem;
   font-weight: 600;
-  background-image: url("D:\sarvvid-ai\sarvvid\src\Images\background.svg");
+  background-image: url("../Images/background.svg");
   background-position: center;
 }
 
